--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,22 @@
 <section id='inns'>
   <h2> Pousadas </h2>
     <% @inns.each do |i| %>
-    <div>
-      <h3><%= link_to(i.trade_name, inn_path(i.id)) %></h3>
-      <dl>
-        <dt>Descrição:</dt>
-        <dd><%= i.description %></dd>
-      </dl>
-      <dl>
-        <dt>Cidade:</dt>
-        <dd><%= i.address.city %></dd>
-      </dl>
-    </div>
+      <% if i.active %>
+        <div>
+          <h3><%= link_to(i.trade_name, inn_path(i.id)) %></h3>
+          <dl>
+            <dt>Descrição:</dt>
+            <dd><%= i.description %></dd>
+          </dl>
+          <dl>
+            <dt>Cidade:</dt>
+            <dd><%= i.address.city %></dd>
+          </dl>
+        </div>
+      <% end %>
   <% end %>
 
-  <% if @inns.empty? %>
-    <p>Não existem galpões cadastrados</p>
+  <% if @inns.empty? || (@inns.count == 1 && !@inns.last.active) %>
+    <p>Não existem pousadas cadastradas</p>
   <% end %>
 </section>
