Adicionar quartos finalizado

--- a/app/views/inns/edit.html.erb
+++ b/app/views/inns/edit.html.erb
@@ -1,92 +1,3 @@
 <h1>Editar Pousada</h1>
 
-<% if @inn.errors.any? %>
-  <p>Verifique os erros abaixo:</p>
-  <ul>
-    <% @inn.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_with(model: @inn, local: true) do |form| %>
-  <div>
-    <%= form.label :trade_name %>
-    <%= form.text_field :trade_name %>
-  </div>
-  <div>
-    <%= form.label :legal_name %>
-    <%= form.text_field :legal_name %>
-  </div>
-  <div>
-    <%= form.label :cnpj %>
-    <%= form.text_field :cnpj %>
-  </div>
-  <div>
-    <%= form.label :phone %>
-    <%= form.text_field :phone %>
-  </div>
-  <div>
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-  <div>
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <%= form.fields_for :address do |address_form| %>
-    <div>
-      <%= address_form.label :street %>
-      <%= address_form.text_field :street %>
-    </div>
-    <div>
-      <%= address_form.label :number %>
-      <%= address_form.number_field :number %>
-    </div>
-    <div>
-      <%= address_form.label :district %>
-      <%= address_form.text_field :district %>
-    </div>
-    <div>
-      <%= address_form.label :city %>
-      <%= address_form.text_field :city %>
-    </div>
-    <div>
-      <%= address_form.label :state %>
-      <%= address_form.text_field :state %>
-    </div>
-    <div>
-      <%= address_form.label :cep %>
-      <%= address_form.text_field :cep %>
-    </div>
-  <% end %>
-
-  <div>
-    <%= form.label :payment_method_id %>
-    <%= form.collection_select :payment_method_id, PaymentMethod.all, :id, :name %>
-  </div>
-  <div>
-    <%= form.label :accepts_pets %>
-    <%= form.check_box :accepts_pets %>
-  </div>
-  <div>
-    <%= form.label :checkin_time %>
-    <%= form.time_field :checkin_time %>
-  </div>
-  <div>
-    <%= form.label :checkout_time %>
-    <%= form.time_field :checkout_time %>
-  </div>
-  <div>
-    <%= form.label :policies %>
-    <%= form.text_area :policies %>
-  </div>
-  <div>
-    <%= form.label :active %>
-    <%= form.check_box :active %>
-  </div>
-  <div>
-    <%= form.submit 'Salvar' %>
-  </div>
-<% end %>
+<%= render 'form' %>
