--- a/app/views/inns/show.html.erb
+++ b/app/views/inns/show.html.erb
@@ -24,9 +24,41 @@
     Não aceita animais
   <% end %>
 </div>
+
 <% if user_signed_in? && @inn.user_id.eql?(current_user.id) %>
+  <h3>Quartos Cadastrados</h3>
+  <% if @inn.rooms.any?(&:is_available?) %>
+    <h4>Disponíveis</h4>
+    <ul>
+      <% @inn.rooms.select(&:is_available?).each do |room| %>
+        <li><%= link_to(room.name, inn_room_path(@inn, room)) %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  <% if @inn.rooms.any? { |room| !room.is_available? } %>
+    <h4>Indisponíveis</h4>
+    <ul>
+      <% @inn.rooms.reject(&:is_available?).each do |room| %>
+        <li><%= link_to(room.name, inn_room_path(@inn, room)) %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  <div>
+    <%= link_to('Cadastrar Quarto', new_inn_room_path(@inn))%>
+  </div>
   <div>
     <%= link_to('Editar', edit_inn_path)%>
   </div>
+<% else %>
+  <% if @inn.rooms.any?(&:is_available?) %>
+    <h3>Quartos Disponíveis</h3>
+    <ul>
+      <% @inn.rooms.select(&:is_available?).each do |room| %>
+        <li><%= link_to(room.name, inn_room_path(@inn, room)) %></li>
+      <% end %>
+    </ul>
+  <% else %>
+    <h3>Não Existem Quartos Disponíveis</h3>
+  <% end %>
 <% end %>
 <%= link_to('Voltar', root_path)%>
