--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -5,6 +5,23 @@
 <p><strong>Ocupação Máxima:</strong> <%= @room.max_occupancy %></p>
 <p><strong>Diária:</strong> <%= number_to_currency(@room.daily_rate) %></p>
 
+<h4>Preços Personalizados</h4>
+<% if @period_prices.any? %>
+  <ul>
+    <% @period_prices.each do |price| %>
+      <li><%= "#{I18n.localize(price.start_date)} - #{I18n.localize(price.end_date)}: #{number_to_currency(price.daily_value)}" %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>Nenhum preço personalizado cadastrado.</p>
+<% end %>
+
+<% if user_signed_in? && @inn.user_id.eql?(current_user.id) %>
+  <div>
+    <%= link_to('Cadastrar Novo Preço', new_inn_room_period_price_path(@inn, @room))%>
+  </div>
+<% end %>
+
 <p><strong>Comodidades:</strong></p>
 <ul>
   <li><%= @room.has_bathroom ? 'Banheiro próprio' : 'Sem banheiro próprio' %></li>
