--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,18 @@
     <header>
       <h1>Pousadaria</h1>
       <nav>
-      
         <%= link_to 'Início', root_path %>    
         <% if user_signed_in? %>
           <%= current_user.email %>
           <%=button_to('Sair', destroy_user_session_path, method: :delete) %>
         <% else %>
           <%=link_to('Entrar', new_user_session_path) %>
+        <% end %>
+
+        <%= form_with(url: search_inns_path, method: :get) do |f| %>
+          <%= f.label :query, 'Buscar Pousada' %>
+          <%= f.text_field :query %>
+          <%= f.submit 'Buscar' %>
         <% end %>
       </nav>
     </header>
