Reservar quarto: fluxo de autenticação modificado para ser realizada após a verificação de disponibilidade da reserva e com novo usuário 'customer'

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,8 @@
 
 .room-container {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
+  justify-content: flex-start; /* Alinha os itens no início (à esquerda) */
 }
 
 .room-card {
