--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,10 +2,21 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  
+  <% if resource_name.to_s == 'customer' %>
+    <div class="field">
+      <%= f.label :full_name %><br />
+      <%= f.text_field :full_name, autofocus: true, autocomplete: "Nome Completo" %>
+    </div>
+    <div class="field">
+      <%= f.label :cpf %><br />
+      <%= f.number_field :cpf, autocomplete: "CPF" %>
+    </div>
+  <% end %>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
   <div class="field">
