--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -3,7 +3,8 @@
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Criar conta como Dono de Pousada", new_registration_path(resource_name) %><br />
+  <%= link_to "Criar conta como Dono de Pousada", new_user_registration_path %><br />
+  <%= link_to "Criar conta como Cliente", new_customer_registration_path %><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
