--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,16 @@
         <% if user_signed_in? %>
           <%= current_user.email %>
           <%=button_to('Sair', destroy_user_session_path, method: :delete) %>
+        <% elsif customer_signed_in? %>
+          <%= current_customer.email %>
+          <%=link_to('Minhas Reservas', reservations_url) %>
+          <%=button_to('Sair', destroy_customer_session_path, method: :delete) %>
         <% else %>
-          <%=link_to('Entrar', new_user_session_path) %>
+          <%=link_to('Entrar como Dono de Pousada', new_user_session_path) %>
+          |
+          <%=link_to('Entrar', new_customer_session_path) %>
         <% end %>
+
 
         <%= form_with(url: search_inns_path, method: :get) do |f| %>
           <%= f.label :query, 'Buscar Pousada' %>
