--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
       <nav>
         <% if user_signed_in? %>
           <%= current_user.email %>
+          <%=link_to('Reservas', reservations_path) %>
+          <%=link_to('Reservas Ativas', active_reservations_url) %>
           <%=button_to('Sair', destroy_user_session_path, method: :delete) %>
         <% elsif customer_signed_in? %>
           <%= current_customer.email %>
