--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
         <% if user_signed_in? %>
           <%= current_user.email %>
           <%=link_to('Reservas', reservations_path) %>
-          <%=link_to('Reservas Ativas', active_reservations_url) %>
+          <%=link_to('Estadias Ativas', active_reservations_path) %>
+          <%=link_to('Estadias Finalizadas', closed_reservations_path) %>
           <%=button_to('Sair', destroy_user_session_path, method: :delete) %>
         <% elsif customer_signed_in? %>
           <%= current_customer.email %>
