Avaliações de estadias finalizada, refatoração de reservation_details

--- a/app/views/active_reservations/index.html.erb
+++ b/app/views/active_reservations/index.html.erb
@@ -6,7 +6,7 @@
     <div class="room-container">        
     <% @reservations.each do |reservation| %>
       <div class="room-card">
-        <%= render 'reservation_details', reservation: reservation, room: reservation.room %>
+        <%= render 'shared/reservation_details', reservation: reservation, room: reservation.room %>
       </div>
     <% end %>
     </div>
@@ -19,7 +19,7 @@
     <div class="room-container">        
     <% @reservations.each do |reservation| %>
       <div class="room-card">
-        <%= render 'reservation_details', reservation: reservation, room: reservation.room %>
+        <%= render 'shared/reservation_details', reservation: reservation, room: reservation.room %>
       </div>
     <% end %>
     </div>
