--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,1 +1,1 @@
-<%= render 'reservation_details', reservation: @reservation, room: @room %>
+<%= render 'shared/reservation_details', reservation: @reservation, room: @room %>
