--- a/app/views/shared/_reservation_details.html.erb
+++ b/app/views/shared/_reservation_details.html.erb
@@ -116,8 +116,10 @@
     <% end %>
   <% end %>
 
-  <h2>Adicionar Item Consumido</h2>
-  <div>
-    <%= render 'consumed_items/form', consumed_item: reservation.consumed_items.new %>
-  </div>
+  <% if reservation.active? %>
+    <h2>Adicionar Item Consumido</h2>
+    <div>
+      <%= render 'consumed_items/form', consumed_item: reservation.consumed_items.new %>
+    </div>
+  <% end %>
 <% end %>
